src/objects/Forecast_Trending__c.object
<CustomObject>
    <fields>
        <fullName>Account_Name__c</fullName>
        <label>Account Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Amount_Converted__c</fullName>
        <label>Amount Converted</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Billing_Country__c</fullName>
        <label>Billing Country</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Close_Date__c</fullName>
        <label>Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Converted_Amount__c</fullName>
        <label>Converted Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Deal_Type__c</fullName>
        <label>Deal Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fiscal_Period__c</fullName>
        <label>Fiscal Period</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Forecast_Bucket__c</fullName>
        <label>Forecast Bucket</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Forecast_Category__c</fullName>
        <label>Forecast Category</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Forecast_Date__c</fullName>
        <label>Forecast Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Forecast_Owner__c</fullName>
        <label>Forecast Owner</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Forecast_Period__c</fullName>
        <formula>CASE(MONTH( Forecast_Date__c ), 
1, &quot;Q2&quot; , 
2, &quot;Q3&quot;, 
3, &quot;Q3&quot;, 
4, &quot;Q3&quot;, 
5, &quot;Q4&quot;, 
6, &quot;Q4&quot;, 
7, &quot;Q4&quot;, 
8, &quot;Q1&quot;, 
9, &quot;Q1&quot;, 
10, &quot;Q1&quot;, 
11, &quot;Q2&quot;, 
12, &quot;Q2&quot;, 
&quot;&quot;) 

&amp; &quot;-&quot; 

&amp; IF((MONTH( Forecast_Date__c ) &gt;= 8 &amp;&amp; MONTH( Forecast_Date__c ) &lt;= 12), 
TEXT (YEAR( Forecast_Date__c )+1) , 
TEXT (YEAR( Forecast_Date__c )) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Forecast Period</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_ID__c</fullName>
        <label>Opportunity ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Name__c</fullName>
        <label>Opportunity Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Owner__c</fullName>
        <label>Opportunity Owner</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Type__c</fullName>
        <label>Opportunity Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>ForecastTestObjects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Period_Overridden__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Period Overridden</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Snapshot_Date__c</fullName>
        <label>Snapshot Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Stage_Duration__c</fullName>
        <label>Stage Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Term_Length_Years__c</fullName>
        <label>Term - Length (Years)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Forecast Trending</label>
    <nameField>
        <label>Forecast Trending Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Forecast Trending</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>